@@ -1,3 +1,8 @@
+2008-04-02  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (adapt-child-to-father): Limit minimal
+	child size to 1x1.
+
 2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/bindings.lisp: Bind Alt+mouse-1/3 to move or resize a frame
